# blazingdb-orchestrator

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: ConfigureBlazingDBCommunication.cmake  ConfigureBlazingDBProtocol.cmake  ConfigureGoogleTest.cmake
cmake/Templates/: BlazingDBProtocol.CMakeLists.txt.cmake  FlatBuffers.CMakeLists.txt.cmake
src/: blazingdb-orchestator.cc
src/blazingdb/: orchestator-service.cc
src/blazingdb/protocol/: interpreter-client.cc
src/config/: BlazingConfig.cpp  BlazingConfig.h
src/orchestrator-service/: blazingdb-communication.hpp  calcite-client.h  mock.cc  orchestator-service.cc  ral-client.h
tests/: CMakeLists.txt
